--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link id="websiteIcon" rel="icon">
         <link rel="stylesheet" href="https://pinpal.github.io/Sileo-Depiction-WebViews/global.css">
         <link rel="stylesheet" href="https://pinpal.github.io/Sileo-Depiction-WebViews/depiction.css">
-        <link rel="stylesheet" href="editor.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <div id="realPageNavbar">
