--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div id="everythingWrapper">
             <div id="sidebar">
-                    <h1>Some Sidebar Shit</h1>
+                    <h1>Some Sidebar</h1>
                 </div>
         
                 <div id="previewBox">
