--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title id="websiteTitle">Depiction Editor</title>
         <link id="websiteIcon" rel="icon">
+        <link rel='stylesheet' href='css/color-picker.css'>
         <link rel="stylesheet" href="https://pinpal.github.io/Sileo-Depiction-WebViews/global.css">
         <link rel="stylesheet" href="https://pinpal.github.io/Sileo-Depiction-WebViews/depiction.css">
         <link rel="stylesheet" href="css/main.css">
@@ -19,7 +20,14 @@
         </div>
         <div id="everythingWrapper">
             <div id="sidebar">
-                    <h1>Some Sidebar</h1>
+                    <h1>Configure</h1>
+                    <div class="settingsCell" id="sidebarColorPicker">
+                        <h3>Tint Colour</h3>
+                        <p>Color that acts as the packages main accent.</p>
+                        <input type='text' placeholder="#2cb1be"/>
+                        <div class="colorPreview" style="background-color: #2cb1be;">h</div>
+                    </div>
+                    <button onClick="console.log(config)" style="margin-top: 100px">[Debug] Log Config</button>
                 </div>
         
                 <div id="previewBox">
@@ -69,6 +77,7 @@
             </div>
         </div>
     </body>
+    <script src='js/color-picker.js'></script>
     <script src="https://pinpal.github.io/Sileo-Depiction-WebViews/global.js"></script>
     <script src="https://pinpal.github.io/Sileo-Depiction-WebViews/packageIconHandler.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/showdown"></script>
