--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <div id="realPageNavbar">
             <div>
                 <span class="realLeftNav">Navbar Title</span>
-                <span class="realRightNav">Some Button</span>
                 <span class="realRightNav" onClick="toggleEditUI()">Toggle Edit UI</span>
             </div>
         </div>
@@ -27,7 +26,8 @@
                         <input type='text' placeholder="#2cb1be"/>
                         <div class="colorPreview" style="background-color: #2cb1be;">h</div>
                     </div>
-                    <button onClick="console.log(config)" style="margin-top: 100px">[Debug] Log Config</button>
+                    <button onClick="console.log(config)">Log Config</button>
+                    <button onClick="downloadConfig()">Download Depiction</button>
                 </div>
         
                 <div id="previewBox">
@@ -60,6 +60,8 @@
                 <h1 id="alertHeader">Heading</h1>
                 <h2 id="alertSubheader">Subheading</h1>
                 <div id="alertContent"></div>
+
+                <!-- Edit Tabs-->
                 <div id="editTabsUI" style="display:none">
                     <p>Tabs are separate screens that are made up of views. 
                         </br>They can be used to separate between more important data (such as a package’s name)
@@ -68,11 +70,30 @@
                     <div id="tabEditorTable"></div>
                     <div id="addTabButton" onClick="addNewTab()">Add New Tab</div>
                 </div>
+
+                <!-- Edit Banner Image-->
                 <div id="editBannerUI" style="display:none">
                     <p>The URL of the image that should be displayed in the topmost header of the package page.</p>
                     <p>Support all basic image formats such as jpg/png.</p>
                     <input type="text" id="bannerUrlField" placeholder="https://the.location.of.your.image/image.png">
                 </div>
+
+                <!-- Edit Banner Image-->
+                <div id="addViewUI" style="display:none">
+                    <div class="viewPreviewContainer" onClick="addView('DepictionHeaderView')">
+                        <div class="viewPreview" style="background-image: url('/img/view-previews/DepictionHeaderView.svg')"></div>
+                        <h1>Heading</h1>
+                    </div>
+                    <div class="viewPreviewContainer" onClick="addView('DepictionSubheaderView')">
+                        <div class="viewPreview" style="background-image: url('/img/view-previews/DepictionSubheaderView.svg')"></div>
+                        <h1>Subheading</h1>
+                    </div>
+                    <div class="viewPreviewContainer" onClick="addView('DepictionLabelView')">
+                        <div class="viewPreview" style="background-image: url('/img/view-previews/DepictionlabelView.svg')"></div>
+                        <h1>Label</h1>
+                    </div>
+                </div>
+
                 <div id="alertButton">Save Changes</div>
             </div>
         </div>
@@ -83,6 +104,7 @@
     <script src="https://cdn.jsdelivr.net/npm/showdown"></script>
     <script src="https://pinpal.github.io/Sileo-Depiction-WebViews/viewHandler.js"></script>
     <script src="js/alerts.js"></script>
+    <script src="js/addViewUI.js"></script>
     <script src="js/editBannerUI.js"></script>
     <script src="js/editTabsUI.js"></script>
     <script src="editor.js"></script>
