Second Alert Page + Fix SVG

--- a/index.html
+++ b/index.html
@@ -81,20 +81,20 @@
                 <!-- Edit Banner Image-->
                 <div id="addViewUI" style="display:none">
                     <div class="viewPreviewContainer" onClick="addView('DepictionHeaderView')">
-                        <div class="viewPreview" style="background-image: url('/img/view-previews/DepictionHeaderView.svg')"></div>
+                        <div class="viewPreview" style="background-image: url('img/view-previews/DepictionHeaderView.svg')"></div>
                         <h1>Heading</h1>
                     </div>
                     <div class="viewPreviewContainer" onClick="addView('DepictionSubheaderView')">
-                        <div class="viewPreview" style="background-image: url('/img/view-previews/DepictionSubheaderView.svg')"></div>
+                        <div class="viewPreview" style="background-image: url('img/view-previews/DepictionSubheaderView.svg')"></div>
                         <h1>Subheading</h1>
                     </div>
                     <div class="viewPreviewContainer" onClick="addView('DepictionLabelView')">
-                        <div class="viewPreview" style="background-image: url('/img/view-previews/DepictionlabelView.svg')"></div>
+                        <div class="viewPreview" style="background-image: url('img/view-previews/DepictionlabelView.svg')"></div>
                         <h1>Label</h1>
                     </div>
                 </div>
 
-                <div id="alertButton">Save Changes</div>
+                <div id="alertButton" style="display:none">Save Changes</div>
             </div>
         </div>
     </body>
