--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
                 <div id="alertErrors"></div>
                 <h1 id="alertHeader">Heading</h1>
                 <h2 id="alertSubheader">Subheading</h1>
-                <div id="alertContent"></div>
 
-                <!-- Edit Tabs-->
+                <!-- Edit Tabs -->
                 <div id="editTabsUI" style="display:none">
                     <p>Tabs are separate screens that are made up of views. 
                         </br>They can be used to separate between more important data (such as a package’s name)
@@ -71,14 +70,14 @@
                     <div id="addTabButton" onClick="addNewTab()">Add New Tab</div>
                 </div>
 
-                <!-- Edit Banner Image-->
+                <!-- Edit Banner Image -->
                 <div id="editBannerUI" style="display:none">
                     <p>The URL of the image that should be displayed in the topmost header of the package page.</p>
                     <p>Support all basic image formats such as jpg/png.</p>
                     <input type="text" id="bannerUrlField" placeholder="https://the.location.of.your.image/image.png">
                 </div>
 
-                <!-- Edit Banner Image-->
+                <!-- Edit Banner Image -->
                 <div id="addViewUI" style="display:none">
                     <div class="viewPreviewContainer" onClick="addView('DepictionHeaderView')">
                         <div class="viewPreview" style="background-image: url('img/view-previews/DepictionHeaderView.svg')"></div>
@@ -92,6 +91,19 @@
                         <div class="viewPreview" style="background-image: url('img/view-previews/DepictionLabelView.svg')"></div>
                         <h1>Label</h1>
                     </div>
+                </div>
+
+                <!-- Edit DepictionHeaderView -->
+                <div id="editDepictionHeaderView" style="display:none">
+                    <input placeholder="Heading Text" type="text">
+                </div>
+
+                <div id="editDepictionSubheaderView" style="display:none">
+                    
+                </div>
+
+                <div id="editDepictionLabelView" style="display:none">
+                    
                 </div>
 
                 <div id="alertButton" style="display:none">Save Changes</div>
