Fix DepictionTableButtonView (kinda)

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
                 <div id="editDepictionTableButtonView" style="display:none" class="alertContent">
                     <p>Adds a table cell that opens a given URL or performs another action when tapped.</p>
                     <input type="text" class="urlField" placeholder="https://the.location.of.your.link.com">
+                    <h1> dis menu is all fucked sorry bout dat</h1>
                     <div class="optionWrapper">
                         <div class="tooltip">Change the padding (white space) above and below the table cell.</div>
                         Vertical Padding
