--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <input type="text" id="bannerUrlField" placeholder="https://the.location.of.your.image/image.png">
                 </div>
 
-                <!-- Edit Banner Image -->
+                <!-- Add New View -->
                 <div id="addViewUI" style="display:none" class="alertContent">
                     <div class="viewPreviewContainer" onClick="addView('DepictionHeaderView')">
                         <div class="viewPreview" style="background-image: url('img/view-previews/DepictionHeaderView.svg')"></div>
@@ -278,6 +278,15 @@
                 <!-- Edit DepictionScreenshotsView -->
                 <div id="editDepictionScreenshotsView" style="display:none" class="alertContent">
                     <p>Displays a screenshot carousel with provided images.</p>
+                    <p>Support all basic image formats such as jpg/png.</p>
+                    <!--
+                    <div class="editScreenshotArray">
+                        <div class="tabEditorCell">
+                            <input type="text" placeholder="https://location.of.your.image/image.png" class="tabNameField">
+                            <div class="deleteField" onclick="deleteScreenshot(this)"></div>
+                        </div>
+                    </div>
+                    -->
                 </div>
 
                 <!-- Edit DepictionTableTextView -->
