DarkMode Front End

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div>
                 <span class="realLeftNav">Sileo Depiction Editor</span>
                 <span class="realRightNav" onClick="toggleEditUI()">Toggle Edit UI</span>
+                <span class="realRightNav" onClick="toggleDarkMode()">Toggle Dark Mode</span>
             </div>
         </div>
         <div id="everythingWrapper">
